Fix overflow scrollbar

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -202,3 +202,12 @@
   font-weight: var(--shiki-dark-font-weight) !important;
   text-decoration: var(--shiki-dark-text-decoration) !important;
 }
+
+@utility scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
